tests/NormalTests/paczka1/fuzzy1/63868812.err
Error in line 22: bfxrlrZJ A460 28,5
Error in line 29: bfxrlrZJ A590 63,7
Error in line 24: A460 A460 54,8
